force-app/main/default/objects/LLC_BI__Loan_Modification__c/LLC_BI__Loan_Modification__c.object-meta.xml
<CustomObject>
    <description>The Loan Modification Object is used to capture information about a modification on a loan.</description>
    <label>Loan Modification</label>
    <nameField>
        <displayFormat>LM-{MM}-{YY}-{00}</displayFormat>
        <label>Loan Modification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>