force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Explanation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Explanation__c</fullName>
    <description>This field is an optional free text area, that is manually entered when creating a loan modification. It  is used to specify the reasons that modifications are being made on the loan.</description>
    <inlineHelpText>Please identify why this loan modification is being proposed</inlineHelpText>
    <label>Explanation</label>
    <type>TextArea</type>
</CustomField>