force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Loan_Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Lookup_Key__c</fullName>
    <description>This field is a formula field, that is automatically populated when starting a loan modification and is the modification&apos;s unique external ID, used in associating the modification to the original loan record. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
    <formula>LLC_BI__Loan__r.LLC_BI__lookupKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Number</label>
    <type>Text</type>
</CustomField>