force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Loan_Mod_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Mod_Detail__c</fullName>
    <description>This field is a free text area that is manually entered and optional. The field  is used to specify details of the loan modification.</description>
    <inlineHelpText>Please enter the specific details of the Loan Modification.</inlineHelpText>
    <label>Loan Mod Detail</label>
    <type>TextArea</type>
</CustomField>