force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Number__c</fullName>
    <description>Field Deprecated.  Replaced by Loan_Lookup_Key__c.</description>
    <formula>LLC_BI__Loan__r.LLC_BI__Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-D Loan Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>