force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Modification_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Modification_Type__c</fullName>
    <description>This field is a picklist field that is manually entered, and is required only if Loan Modifications are used. It is used to specify the type of modification that is happening on the loan. Loan modifications in general are not required but are optionally created based on financial institution business process.</description>
    <label>Modification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correct Existing Note</fullName>
            </value>
            <value>
                <fullName>Extend Amortization</fullName>
            </value>
            <value>
                <fullName>Increase Loan Amount</fullName>
            </value>
            <value>
                <fullName>Interest Rate Reduction</fullName>
            </value>
            <value>
                <fullName>Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Reduce Loan Amount</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>