force-app/main/default/objects/LLC_BI__Loan_Modification__c/fields/LLC_BI__Owner__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Owner__c</fullName>
    <description>This field is a manually selected, optional, picklist. It specifies which department owns the modification process.</description>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Loan Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>